--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,9 +1,9 @@
 .hero-section {
   min-height: 100vh;
-  width: 100%;
-  padding: 0 4rem;
+  width: calc(100vw - 3rem);
+  padding: 0 1rem;
   background-color: #151515;
-  margin-right: 2px; /* Space for navbar */
+  position: relative;
 
   overflow: hidden;
 }
@@ -14,17 +14,24 @@
 
 .name-wrapper {
   transition: transform 0.3s ease-out, opacity 0.3s ease-out;
-}
-
-.name-text {
-  font-size: 6rem;
-  line-height: 1;
-  font-weight: 700;
+  margin-bottom: 2rem; /* Add margin to prevent overflow */
 }
 
 .profile-image {
-  width: 300px;
-  height: 300px;
+  width: 18.75rem !important;
+  height: 18.75rem !important;
+  object-fit: cover !important;
+  border-radius: 2rem !important;
+}
+/* .profile-image {
+  width: 18.75rem;
+  height: 18.75rem;
   object-fit: cover;
-  border-radius: 16px;
+  border-radius: 1rem;
+} */
+
+/* .name-text {
+  font-size: 6rem;
+  line-height: 1;
+  font-weight: 700;
 }
