--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #151515;
+  overflow-x: hidden;
 }
 
 a {
